--- a/zoo_management/Dockerfile
+++ b/zoo_management/Dockerfile
@@ -1,20 +1,24 @@
-# Use the official Python image from the Docker Hub
-FROM python:3.9-slim
+FROM python:3.11-slim-bookworm AS base
+# Install Poetry
+RUN pip install poetry
+ENV POETRY_HOME="/opt/poetry" \
+    POETRY_VIRTUALENVS_CREATE=true \
+    POETRY_VIRTUALENVS_IN_PROJECT=true \
+    POETRY_NO_INTERACTION=1
+ENV PATH="$PATH:$POETRY_HOME/bin"
 
-# Set the working directory
+FROM base AS build
 WORKDIR /app
+COPY pyproject.toml .
+RUN poetry lock --no-update && poetry install --only=main
+COPY . .
 
-# Copy the current directory contents into the container at /app
-COPY . /app
-
-# Install any needed packages specified in requirements.txt
-RUN pip install Flask
-
-# Make port 5000 available to the world outside this container
+# Runtime stage
+FROM base AS runtime
+WORKDIR /app
+COPY --from=build /app /app
+ENV PATH="/app/.venv/bin:$PATH"
+RUN echo "source /app/.venv/bin/activate" >> /etc/profile.d/venv.sh
 EXPOSE 5000
 
-# Define environment variable
-ENV FLASK_APP=app.py
-
-# Run app.py when the container launches
-CMD ["flask", "run", "--host=0.0.0.0"]
+CMD ["flask", "--app", "app", "run", "--host", "0.0.0.0"]
